IniFile class has been added. Support to save/load options

--- a/FTPsync/FTPsync.csproj
+++ b/FTPsync/FTPsync.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FTP.cs" />
+    <Compile Include="IniFile.cs" />
     <Compile Include="MainForm.cs" />
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
